[package]
name = "dying-light-internal-trainer"
edition = "2021"
license-file = "LICENSE"
publish = false

[lib]
name = "hid"
crate-type = ["cdylib"]

[dependencies]
libmem = "5.0.1"
hudhook = { git = "https://github.com/veeenu/hudhook.git", rev = "9c78aa5", default-features = false, features = [
    "dx11",
] }

[patch."https://github.com/veeenu/hudhook.git"]
hudhook = { path = "vendor/hudhook" }

[build-dependencies]
forward-dll = "0.1.16"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1
panic = 'abort'
incremental = false
debug = false
debug-assertions = false
overflow-checks = false
