[package]
name = "dying-light-internal-trainer"
edition = "2021"
license-file = "LICENSE"
publish = false

[lib]
name = "hid"
crate-type = ["cdylib"]

[dependencies]
libmem = { version = "5.0.1", default-features = false }
hudhook = { path = "vendor/hudhook", default-features = false, features = [
    "dx11",
] }

[build-dependencies]
forward-dll = "0.1.16"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1
panic = 'abort'
incremental = false
debug = false
debug-assertions = false
overflow-checks = false
