[package]
edition = "2024"
license-file = "LICENSE"
name = "dying-light-internal-trainer"
publish = false

[lib]
crate-type = ["cdylib"]
name = "hid"

[dependencies]
hudhook = { path = "vendor/hudhook", default-features = false, features = [
  "dx11",
] }
libmem = { version = "5.0.4" }

[build-dependencies]
forward-dll = "0.1.16"

[profile.dev]
overflow-checks = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
panic = 'abort'
strip = true
